# AndroidNativeDrawPlus

./: README  build.gradle.kts  settings.gradle.kts
draw/: build.gradle.kts
draw/src/main/assets/: classes.dex
draw/src/main/cpp/: CMakeLists.txt  main.cpp  run.bat  shell.txt
draw/src/main/cpp/Opengl/: OpenglUtils.cpp  OpenglUtils.h
draw/src/main/cpp/imgui/: imconfig.h  imgui.cpp
draw/src/main/cpp/imgui/backends/: imgui_impl_android.h  imgui_impl_vulkan.h
draw/src/main/cpp/include/: Log.h  TouchHelperA.cpp  TouchHelperA.h  VectorStruct.h  classes.h  jenv.cpp  jenv.h
draw/src/main/cpp/vulkan/: CreateShaderModule.cpp  CreateShaderModule.h  VulkanMain.cpp  VulkanMain.hpp  VulkanUtils.cpp  VulkanUtils.h
draw/src/main/java/com/example/draw/: Main.java
draw/src/main/java/com/example/draw/wrappers/: ActivityManager.java  ClipboardManager.java  Command.java  ContentProvider.java  DisplayInfo.java  DisplayManager.java  FakeContext.java  IO.java  InputManager.java  Ln.java  PowerManager.java  ServiceManager.java  SettingsException.java  Size.java  StatusBarManager.java  SurfaceControl.java  WindowManager.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
